# 1-SEC

./: .gitignore  .goreleaser.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SKILL.md  go.mod  go.sum  install.sh
.github/workflows/: ci.yml  close-prs.yml  release.yml
1sec-security/: SECURITY.md  SKILL.md
1sec-security/references/: operations-runbook.md  vps-agent-guide.md
cmd/1sec/: banner.go  cmd_alerts.go  cmd_archive.go  cmd_check.go  cmd_collect.go  cmd_completions.go  cmd_config.go  cmd_correlator.go  cmd_dashboard.go  cmd_dashboard_test.go  cmd_docker.go  cmd_doctor.go  cmd_enforce.go  cmd_events.go  cmd_export.go  cmd_help.go  cmd_init.go  cmd_logs.go  cmd_modules.go  cmd_profile.go  cmd_rust.go  cmd_scan.go  cmd_setup.go  cmd_setup_key.go  cmd_status.go  cmd_stop.go  cmd_threats.go  cmd_up.go  helpers.go  helpers_test.go  http.go  main.go  output.go  selfupdate.go  selfupdate_test.go
configs/: default.yaml
deploy/docker/: .dockerignore  Dockerfile  docker-compose.yml
deploy/helm/: Chart.yaml  values.yaml
internal/api/: enforce_handlers.go  enforce_handlers_test.go  server.go  server_new_endpoints_test.go  server_test.go
internal/collect/: authlog.go  collector.go  github.go  jsonlog.go  nginx.go  pfsense.go
internal/core/: action_chain.go  (+44 more)
rust/: .gitignore
rust/1sec-engine/: Cargo.toml  build.sh  osv-scanner.toml
rust/1sec-engine/src/: analytics.rs  config.rs  events.rs  main.rs  matcher.rs  nats_bridge.rs  normalize.rs  packet.rs  patterns.rs  tests.rs
scripts/: requirements-vuln-report.txt  weekly_vuln_report.py
(+54 files in other folders)
